[[release-notes-5.10.4]]
== 5.10.4

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/79?closed=1+[5.10.4] milestone page in the JUnit repository
on GitHub.


[[release-notes-5.10.4-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* Fixed potential locking issue with `ExclusiveResource` in the
  `HierarchicalTestExecutorService`, which could lead to deadlocks in certain scenarios.

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.10.4-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.10.4-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓